app/testapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-deploy
  name: test-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deploy
  template:
    metadata:
      labels:
        app: test-deploy
    spec:
      volumes:
        - name: web-dir
          configMap:
            name: web-data
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - name: web-dir
            mountPath: /usr/share/nginx/html
            readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-deploy
  name: test-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: test-deploy
